# core2

./: .env  CMakeLists.txt  README.md  build.sh  hello.cpp
builds/web/: hello.wasm
docs/: ViewportInterface.md
docs/proposals/: styleguide.md
docs/proposals/guides/: serialization_optimization.md
include/error/: ocore.hpp
include/input/: input_device.hpp  keyboard.hpp  mouse.hpp
include/system/: allocator.hpp  file_system.hpp  local_file_system.hpp  log.hpp  system.hpp  viewport_interface.hpp  viewport_manager.hpp
include/types/: bitset.hpp  data_types.hpp  enum.hpp  flp.hpp  grid.hpp  list_ref.hpp  mat.hpp  template_helpers.hpp  types.hpp  units.hpp  vec.hpp
include/utils/: hash.hpp  inflect.hpp  math.hpp  random.hpp  thread.hpp  timer.hpp
platform/windows/include/input/: windows_input.hpp
platform/windows/include/system/: windows_allocator.hpp  windows_file_system.hpp  windows_log.hpp  windows_system.hpp  windows_viewport_manager.hpp  wlog.hpp
platform/windows/src/system/: windows_allocator.cpp  windows_file_system.cpp  windows_log.cpp  windows_system.cpp  windows_viewport_manager.cpp  wlog.cpp
platform/windows/src/utils/: windows_thread.cpp
proposals/format/: oiIM.md
proposals/standard/: serialization.md  texture_arrays.md  texture_object.md
proposals/standard/graphics/: command_list.md  render_graph.md  resource_object.md  texture_lists.md
proposals/uml/: resource_object.xml
src/input/: input_device.cpp  keyboard.cpp
src/system/: file_system.cpp  local_file_system.cpp  log.cpp  system.cpp  viewport_manager.cpp  viewportmanager.cpp
src/utils/: timer.cpp
test/: test.cpp
